EB-2002-11-20-0  Bugfix:    race condition if signals are to be delivered in
                            job's startup phase
                 IZ:        #126
                 Bugtraq:   #4780316
                 Review:    AH

CR-2002-11-19-3  L10N       - modified message definitions
                            - new command line parameters for infotext:
                              raw     : return localized format string
                              __eoc__ : stop option parsing (after this option)

JG-2002-11-19-0  Enhancem.: First part of a flat file spooling module
                            containing generic functions for input/output
                            of any objects in different formats.
                 Cleanup:   Several cleanup issues done in libuti and libgdi.

AH-2002-11-18-1  Bugfix:    Complex values for user defined complexes
                              are rejected with global host.
                 IZ         418
                 Bugtraq    4776754
                 Review     AS

EB-2002-11-15-0  Testsuite: Added two new tests which try to find
                            bug #402 and #423
                 IZ:        #425, #426

AA-2002-11-14-0  Kerberos:  changes to fix build problems with krb5

EB-2002-11-14-0  Bugfix:    - memopy leak in execd
                            - stepsize 0 in array job specification
                              results in qmaster exception
                            - job env variables SGE_TASK_* might be
                              overwritten by qsub -v
                 IZ:        #423, #424, #402, #264
                 Bugtraq:   #4778757, #4778758, #4778762
                 Review:    partially AH

EB-2002-11-12-0  Enhancem.: Allow qsub -b y to handle built-in commands
                 Issue:     #25 #26
                 Review:    AH

JG-2002-11-04-0  Enhancem.: Added utility functions for profiling.
                            Made scheduler use these profiling functions 